[package]
name = "signal-stack"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Install signal handlers using a stack-based model for cooperative signal handling"
repository = "https://github.com/Diggsey/grace"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
spin = "0.7"
parking_lot = "0.11.1"
